Fix spacing

--- a/src/Styles.scss
+++ b/src/Styles.scss
@@ -531,7 +531,7 @@ body {
     }
 
     &__boxArea {
-        padding: 5vw 8vw;
+        padding: 5vw 7.5vw;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
